--- a/index.html
+++ b/index.html
@@ -144,166 +144,138 @@
   </section>
   <!-- about section ends -->
 
-  <!-- skills section starts --> 
   <section class="skills" id="skills">
-
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
-
+  
     <div class="container">
-      <div class="row" id="skillsContainer">
-         <div class="col">
-
-                <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-html5">
-                      <span>HTML</span></i>
-                      <span>90%</span>
-                    </div>
-                    <div class="line html"></div>
-                </div>
-
-                  <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-css3-alt">
-                      <span>CSS</span></i>
-                      <span>82%</span>
-                    </div>
-                    <div class="line css"></div>
-                  </div>
-
-                  <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-js-square">
-                      <span>JavaScript</span></i>
-                      <span>40%</span>
-                    </div>
-                    <div class="line javascript"></div>
-                  </div> 
-
-          <div class="bar">
-                    <div class="info">
-                      <i class="fas fa-code">
-                      <span>jQuery</span></i>
-                      <span>50%</span>
-                    </div>
-                    <div class="line jquery"></div>
-                  </div>
-
-           <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-react">
-                      <span>ReactJS</span></i>
-                      <span>55%</span>
-                    </div>
-                    <div class="line reactjs"></div>
-                  </div>
-              </div>
-
-              <div class="col">
-                <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-java">
-                      <span>Java</span></i>
-                      <span>80%</span>
-                    </div>
-                    <div class="line java"></div>
-                  </div>
-
-                  <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-python">
-                      <span>Python</span></i>
-                      <span>60%</span>
-                    </div>
-                    <div class="line python"></div>
-                  </div> 
-
-          <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-cplusplus">
-                      <span>C++</span></i>
-                      <span>45%</span>
-                    </div>
-                    <div class="line cplusplus"></div>
-                  </div> 
-
-         <div class="bar">
-                    <div class="info">
-                      <i class="fas fa-database">
-                      <span>MySQL</span></i>
-                      <span>80%</span>
-                    </div>
-                    <div class="line mysql"></div>
-                  </div> 
-
-         <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-git">
-                      <span>Git & GitHub | VCS</span></i>
-                      <span>88%</span>
-                    </div>
-                    <div class="line vcs"></div>
-                  </div>
-
-                  <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-linux">
-                      <span>Linux</span></i>
-                      <span>70%</span>
-                    </div>
-                    <div class="line linux"></div>
-                  </div> 
-
-         <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-docker">
-                      <span>Docker</span></i>
-                      <span>75%</span>
-                    </div>
-                    <div class="line docker"></div>
-                  </div> 
-
-         <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-js-square">
-                      <span>NodeJS</span></i>
-                      <span>70%</span>
-                    </div>
-                    <div class="line nodejs"></div>
-                  </div> 
-
-          <div class="bar">
-                    <div class="info">
-                      <i class="fab fa-jenkins">
-                      <span>Jenkins</span></i>
-                      <span>60%</span>
-                    </div>
-                    <div class="line jenkins"></div>
-                  </div> 
-
-                  <div class="bar">
-                    <div class="info">
-                      <i class="fas fa-tasks">
-                      <span>Project Management (Jira, UML, Scrum)</span></i>
-                      <span>85%</span>
-                    </div>
-                    <div class="line project-management"></div>
-                  </div> 
-
-         <div class="bar">
-                    <div class="info">
-                      <i class="fas fa-tools">
-                      <span>Testing Tools (Postman)</span></i>
-                      <span>80%</span>
-                    </div>
-                    <div class="line postman"></div>
-                  </div> 
-
+  
+      <!-- Frontend Development -->
+      <div class="row">
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-html5" style="color: #e34c26;"></i>
+            <span>HTML</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-css3-alt" style="color: #264de4;"></i>
+            <span>CSS</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-js" style="color: #f0db4f;"></i>
+            <span>JavaScript</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-react" style="color: #61DBFB;"></i>
+            <span>ReactJS</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-code"></i>
+            <span>jQuery</span>
+          </div>
+        </div>
       </div>
-    </div>
+  
+      <!-- Backend & Programming -->
+      <div class="row">
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-java" style="color: #f89820;"></i>
+            <span>Java</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-python" style="color: #4B8BBE;"></i>
+            <span>Python</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-cuttlefish"></i>
+            <span>C++</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-node-js" style="color: #68a063;"></i>
+            <span>NodeJS</span>
+          </div>
+        </div>
+      </div>
+  
+      <!-- Databases & DevOps -->
+      <div class="row">
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-database"></i>
+            <span>MySQL</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-git-alt" style="color: #f1502f;"></i>
+            <span>Git & GitHub</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-linux"></i>
+            <span>Linux</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-docker" style="color: #0db7ed;"></i>
+            <span>Docker</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-jenkins"></i>
+            <span>Jenkins</span>
+          </div>
+        </div>
+      </div>
+  
+      <!-- Management & Tools -->
+      <div class="row">
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-tasks"></i>
+            <span>Jira / UML / Scrum</span>
+          </div>
+        </div>
+  
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-wrench"></i>
+            <span>Postman</span>
+          </div>
+        </div>
+      </div>
+  
     </div>
   </section>
-  <!-- skills section ends -->
+  
 
 
   <!-- ======= Certifications Section ======= -->
