--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       </div>
     </div>
 
-    <!-- Application Python : YouTube Video Downloader -->
+    <!-- Application Python : YouTube Video Downloader 
     <div class="box tilt">
       <img draggable="false" src="./assests/images/projects/youtube-downloader.png" alt="" />
       <div class="content">
@@ -428,7 +428,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Application Java Desktop : Gestion des tâches des professeurs -->
     <div class="box tilt">
@@ -447,7 +447,7 @@
       </div>
     </div>
 
-    <!-- Projet C : Gestion des billets d’un aéroport -->
+    <!-- Projet C : Gestion des billets d’un aéroport 
     <div class="box tilt">
       <img draggable="false" src="./assests/images/projects/airport-ticket-management.png" alt="" />
       <div class="content">
@@ -462,7 +462,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="viewall">
       <a href="/projects/" class="btn"><span>View All</span>
@@ -476,96 +476,64 @@
 
 
 
-  <!-- experience section starts -->
-  <section class="experience" id="experience">
+  <!-- experience section starts --> 
+<section class="experience" id="experience">
 
-    <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
+  <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
 
-    <div class="timeline">
+  <div class="timeline">
 
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>SayF</h2>
-          </div>
-          <div class="desc">
-            <h3>Growth Intrn | Internship</h3>
-            <p>Jan 2022 - March 2022</p>
-            <p>Worked on Growth of the company
-              In this regression task, we worked on the growth of the company and the changegs required for the growth .
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Spark The Soul</h2>
-          </div>
-          <div class="desc">
-            <h3>Technical Head</h3>
-            <p>March 2021 - Present</p>
-            <p>In this i have organised a lot of event for the organisazion and people loved it and participated in that
-              event.</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- <div class="container left">
+    <!-- AWS Cloud Formation ALX -->
+    <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>ConnectBud</h2>
+          <h2>ALX</h2>
         </div>
         <div class="desc">
-            <h3>Coding-Tutor</h3>
-            <p>Aug 2021 - Present</p>
-            <p>ConnectBud Tutor | Live 1:1 Online Coding Classes for Kids.</p>
-               
-            
+          <h3>AWS Cloud Computing Track</h3>
+          <p>April 2025 – February 2026</p>
+          <p>Completed a professional cloud formation with ALX including AWS Cloud Practitioner and AWS Solutions Architect certifications.</p>
         </div>
       </div>
     </div>
 
+    <!-- Dataverse Forum -->
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Sparks Foundation</h2>
+          <h2>Dataverse</h2>
         </div>
         <div class="desc">
-            <h3> Web Development and Designing | Internship</h3>
-            <p>July 2021 - Present</p>
-            <p>Created Basic Banking System Website for The Sparks Foundation  this is a simple credit management system given in sparks foundation internship program..</p>
+          <h3>Forum Organizer</h3>
+          <p>Organized and contributed to the successful execution of the Dataverse tech forum, including planning, logistics, and outreach.</p>
         </div>
       </div>
-    </div> -->
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Google Cloud </h2>
-          </div>
-          <div class="desc">
-            <h3> Google Cloud Facilitator Program</h3>
-            <h2>Milestone Acheiver</h2>
-            <p>April 2022 - July 2022</p>
-            <p>
-              During the program, I have completed 100+ google Qwiklabs to complete the Milestone and received swags
-              from Google.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="morebtn">
-        <a href="./experience/index.html" class="btn"><span>View All</span>
-          <i class="fas fa-arrow-right"></i>
-        </a>
-      </div>
-
     </div>
 
-  </section>
-  <!-- experience section ends -->
+    <!-- Hackathon MLOps -->
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Hackathon MLOps</h2>
+        </div>
+        <div class="desc">
+          <h3>Competition Organizer & Evaluator</h3>
+          <p>I've participated in the organization of the MLOps Hackathon, testing and evaluating participants’ machine learning solutions.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="morebtn">
+      <a href="./experience/index.html" class="btn"><span>View All</span>
+        <i class="fas fa-arrow-right"></i>
+      </a>
+    </div>
+
+  </div>
+
+</section>
+<!-- experience section ends -->
+
 
   <!-- testmonial section starts -->
   <section class="testmonial" id="testmonial">
