--- a/404.html
+++ b/404.html
@@ -83,17 +83,13 @@
       
           <div class="share">
 
-            <li><a class="linkedin" href=" https://www.linkedin.com/in/Assia-Amahouch02/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-            <li><a class="github" href="https://github.com/AssiaAmahouch02" target="_blank"><i class="fab fa-github"></i></a></li>
-            <li><a class="YouTube" href="https://www.youtube.com/channel/UCmqNIRWLzwhPCuZUYd5Oxeg" target="_blank"><i class="fab fa-youtube"></i></a></li>
-            <li><a class="twitter" href="https://twitter.com/Assia52870643" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a class="Discord" href="https://discord.gg/rEr9EKN8fv" target="_blank"><i class="fab fa-discord"></i></a></li>
-            <li><a class="instagram" href="https://www.instagram.com/your.Assia_/"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          </div>
+            <li><a class="linkedin" href=" https://www.linkedin.com/in/assia-amahouch-091321211/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+            <li><a class="github" href="https://github.com/Assiaamahouch" target="_blank"><i class="fab fa-github"></i></a></li>
+        
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/Assia-Amahouch02/">Assia Amahouch</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/assia-amahouch-091321211/">Assia Amahouch</a></h1>
 
 </section>
 <!-- footer section ends -->
