--- a/index.html
+++ b/index.html
@@ -698,18 +698,15 @@
         <p> <i class="fas fa-map-marked-alt"></i>Munger, India-811202</p>
         <div class="share">
 
-          <a href="https://www.linkedin.com/in/AssiaAmahouch02/" class="fab fa-linkedin" target="_blank"></a>
-          <a href="https://github.com/AssiaAmahouch02" class="fab fa-github" target="_blank"></a>
-          <a href="mailto:Assiamgr53@gmail.com" class="fas fa-envelope" target="_blank"></a>
-          <a href="https://twitter.com/Assia52870643" class="fab fa-twitter" target="_blank"></a>
-          <a href="https://www.instagram.com/Assiah.Amahouch/" class="fab fa-instagram" target="_blank"></a>
-          <a href="https://www.youtube.com/channel/UCmqNIRWLzwhPCuZUYd5Oxeg" class="fab fa-youtube" target="_blank"></a>
+          <a href="https://www.linkedin.com/in/assia-amahouch-091321211/" class="fab fa-linkedin" target="_blank"></a>
+          <a href="https://github.com/Assiaamahouch" class="fab fa-github" target="_blank"></a>
+          <a href="mailto:assia.amh@gmail.com" class="fas fa-envelope" target="_blank"></a>
         </div>
       </div>
     </div>
 
     <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a
-        href="https://www.linkedin.com/in/Assia-Amahouch02/"> Assia Amahouch</a></h1>
+        href="https://www.linkedin.com/in/assia-amahouch-091321211/"> Assia Amahouch</a></h1>
 
   </section>
   <!-- footer section ends -->
