--- a/projects/index.html
+++ b/projects/index.html
@@ -89,7 +89,7 @@
       <div class="box">
         <h3>contact info</h3>
         
-        <p> <i class="fas fa-envelope"></i>Assiamgr53@gmail.com</p>
+        <p> <i class="fas fa-envelope"></i></p>
         <p> <i class="fas fa-map-marked-alt"></i>Munger ,India 811202</p>
         <div class="share">
 
