--- a/experience/index.html
+++ b/experience/index.html
@@ -257,8 +257,8 @@
       <div class="box">
           <h3>contact info</h3>
           
-          <p> <i class="fas fa-envelope"></i>Assiamgr53@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Munger, India-811202</p>
+          <p> <i class="fas fa-envelope"></i></p>
+          <p> <i class="fas fa-map-marked-alt"></i></p>
           <div class="share">
 
             <a href="https://www.linkedin.com/in/assia-amahouch-091321211/" class="fab fa-linkedin" target="_blank"></a>
