--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
       <div class="box">
         <h3>contact info</h3>
 
-        <p> <i class="fas fa-envelope"></i>Assiamgr53@gmail.com</p>
-        <p> <i class="fas fa-map-marked-alt"></i>Munger, India-811202</p>
+        <p> <i class="fas fa-envelope"></i>assia.amh@gmail.com</p>
+        <p> <i class="fas fa-map-marked-alt"></i>Rabat ,MAROC</p>
         <div class="share">
 
           <a href="https://www.linkedin.com/in/assia-amahouch-091321211/" class="fab fa-linkedin" target="_blank"></a>
