--- a/projects/index.html
+++ b/projects/index.html
@@ -90,7 +90,7 @@
         <h3>contact info</h3>
         
         <p> <i class="fas fa-envelope"></i></p>
-        <p> <i class="fas fa-map-marked-alt"></i>Munger ,India 811202</p>
+        <p> <i class="fas fa-map-marked-alt"></i>Rabat , Maroc</p>
         <div class="share">
 
             <a href="https://www.linkedin.com/in/assia-amahouch-091321211/" class="fab fa-linkedin" target="_blank"></a>
