--- a/404.html
+++ b/404.html
@@ -8,7 +8,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="/assests/images/profile.png" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="/assests/images/favicon.png" type="image/x-png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Got Lost! Page Not Found</title>
 </head>
 <body oncontextmenu="return false">
@@ -78,8 +79,8 @@
       <div class="box">
           <h3>contact info</h3>
          
-          <p> <i class="fas fa-envelope"></i>Assiamgr53@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Munger, India-811202</p>
+          <p> <i class="fas fa-envelope"></i>Assia.amh@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Rabat , MAROC</p>
       
           <div class="share">
 
