--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Favicon -->
-  <link id='favicon' rel="shortcut icon" href="./assests/images/profile.png" type="image/x-png">
+  <link id='favicon' rel="shortcut icon" href="./assests/images/favicon.png" type="image/x-png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Portfolio | Assia Amahouch </title>
 
   <!-- emailjs script -->
