--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li><a href="#education">Education</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#testmonial">testimonial</a></li>
+        <!-- <li><a href="#testmonial">testimonial</a></li>-->
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -536,7 +536,7 @@
 <!-- experience section ends -->
 
 
-  <!-- testmonial section starts -->
+  <!-- testmonial section starts 
   <section class="testmonial" id="testmonial">
 
     <h2 class="heading"><i class="fas fa-quote-left"></i> testimonials</h2>
@@ -624,7 +624,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- testmonial section ends -->
 
