adding portfolio to the list of projects

--- a/index.html
+++ b/index.html
@@ -362,6 +362,22 @@
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
   <div class="box-container">
+    <div class="box tilt">
+      <img draggable="false" src="./assets/images/projects/portfolio-preview.png" alt="Portfolio Project Preview" />
+      <div class="content">
+        <div class="tag">
+          <h3>Personal Portfolio Website</h3>
+        </div>
+        <div class="desc">
+          <p>Designed and developed a responsive personal portfolio to showcase my projects, skills, and professional journey. Built using HTML, CSS, JavaScript, and enhanced with animations and interactive UI.</p>
+          <div class="btns">
+            <a href="https://assiaamahouch.github.io/Assia.Amahouch/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Assiaamahouch/Assia.Amahouch" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 
     <!-- Application de gestion d’une entreprise de location de voiture -->
     <div class="box tilt">
@@ -397,22 +413,6 @@
       </div>
     </div>
 
-    <!-- Application C++ : Gestion d’une banque -->
-    <div class="box tilt">
-      <img draggable="false" src="./assests/images/projects/bank-management-app.png" alt="" />
-      <div class="content">
-        <div class="tag">
-          <h3>Application C++ : Gestion d’une banque</h3>
-        </div>
-        <div class="desc">
-          <p>Conception d’interface, gestion de base de données en C++.</p>
-          <div class="btns">
-            <a href="https://github.com/yourusername/bank-management-app" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/yourusername/bank-management-app" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Application Python : YouTube Video Downloader 
     <div class="box tilt">
