updating projects section

--- a/index.html
+++ b/index.html
@@ -363,13 +363,13 @@
 
   <div class="box-container">
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio-preview.png" alt="Portfolio Project Preview" />
+      <img draggable="false" src="./assests/images/projects/portfolio-preview.png" alt="Portfolio Project Preview" />
       <div class="content">
         <div class="tag">
           <h3>Personal Portfolio Website</h3>
         </div>
         <div class="desc">
-          <p>Designed and developed a responsive personal portfolio to showcase my projects, skills, and professional journey. Built using HTML, CSS, JavaScript, and enhanced with animations and interactive UI.</p>
+          <p>Designed and developed a responsive personal portfolio , Built using HTML, CSS, JavaScript, and enhanced with animations and interactive UI.</p>
           <div class="btns">
             <a href="https://assiaamahouch.github.io/Assia.Amahouch/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/Assiaamahouch/Assia.Amahouch" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
@@ -384,10 +384,10 @@
       <img draggable="false" src="./assests/images/projects/car-rental-app.png" alt="" />
       <div class="content">
         <div class="tag">
-          <h3>Application de gestion d’une entreprise de location de voiture</h3>
+          <h3>Car Rental Company Management Application</h3>
         </div>
         <div class="desc">
-          <p>Développement backend avec Spring Boot, base de données MySQL, et intégration frontend avec React.</p>
+          <p>Backend development with Spring Boot, MySQL database, and frontend integration using React.</p>
           <div class="btns">
             <a href="https://github.com/Assiaamahouch/CarBook?tab=readme-ov-file" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/Assiaamahouch/CarBook?tab=readme-ov-file" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
@@ -401,10 +401,10 @@
       <img draggable="false" src="./assests/images/projects/school-support-app.png" alt="" />
       <div class="content">
         <div class="tag">
-          <h3>Application Web : Management d’un centre de soutien scolaire</h3>
+          <h3>Web Application: School Support Center Management</h3>
         </div>
         <div class="desc">
-          <p>Administration de base de données en Python, développement frontend avec HTML, CSS (Tailwind, Bootstrap), et JavaScript.</p>
+          <p> Backend developed with Flask, integrated with a MySQL database. Frontend built using HTML, CSS (Bootstrap), and JavaScript for a responsive user experience.</p>
           <div class="btns">
             <a href="https://github.com/Assiaamahouch/School-Management" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/Assiaamahouch/School-Management" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
@@ -412,6 +412,22 @@
         </div>
       </div>
     </div>
+    <div class="box tilt"> 
+      <img draggable="false" src="./assets/images/projects/five-compiler-preview.png" alt="Five Compiler Project Preview" />
+      <div class="content">
+        <div class="tag">
+          <h3>Five Compiler – Bison/Flex/C Project</h3>
+        </div>
+        <div class="desc">
+          <p>Developed a custom compiler using Flex for lexical analysis, Bison for parsing, and C for semantic processing.</p>
+          <div class="btns">
+            <a href="https://github.com/Assiaamahouch/five.git" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Assiaamahouch/five.git" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 
 
     <!-- Application Python : YouTube Video Downloader 
@@ -436,10 +452,10 @@
       <img draggable="false" src="./assests/images/projects/teacher-task-manager.png" alt="" />
       <div class="content">
         <div class="tag">
-          <h3>Application Java Desktop : Gestion des tâches des professeurs</h3>
+          <h3>Java Desktop Application: Teacher Task Management</h3>
         </div>
         <div class="desc">
-          <p>Développement avec Swing et gestion de données.</p>
+          <p>Developed using Java Swing and MongoDB</p>
           <div class="btns">
             <a href="https://github.com/yourusername/teacher-task-manager" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/yourusername/teacher-task-manager" class="btn" target="_blank"><i class="fas fa-code"></i> Code</a>
