--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       </div>
     </div>
     <div class="box tilt"> 
-      <img draggable="false" src="./assets/images/projects/five-compiler-preview.png" alt="Five Compiler Project Preview" />
+      <img draggable="false" src=".\assests\images\projects\five-compiler-preview.png" alt="Five Compiler Project Preview" />
       <div class="content">
         <div class="tag">
           <h3>Five Compiler – Bison/Flex/C Project</h3>
