--- a/index.html
+++ b/index.html
@@ -692,9 +692,7 @@
 
       <div class="box">
         <h3>Assia's Portfolio</h3>
-        <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br /> <br /> Please wait
-          for a while all major projects will be listed soon. Till then keep visiting. Connect with me over live chat!
-        </p>
+        <p>I appreciate your visit. I’m committed to continuous creation and innovation in every endeavor.</p>
       </div>
 
       <div class="box">
