--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   
     <div class="container">
   
-      <!-- Frontend Development -->
+            <!-- Frontend Development -->
       <div class="row">
         <div class="bar">
           <div class="info">
@@ -151,36 +151,43 @@
             <span>HTML</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
             <i class="fab fa-css3-alt" style="color: #264de4;"></i>
             <span>CSS</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
             <i class="fab fa-js" style="color: #f0db4f;"></i>
             <span>JavaScript</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
             <i class="fab fa-react" style="color: #61DBFB;"></i>
-            <span>ReactJS</span>
+            <span>React</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
-            <i class="fas fa-code"></i>
-            <span>jQuery</span>
+            <i class="fab fa-angular" style="color: #dd0031;"></i>
+            <span>Angular</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-bootstrap" style="color: #563d7c;"></i>
+            <span>Bootstrap</span>
           </div>
         </div>
       </div>
-  
+
       <!-- Backend & Programming -->
       <div class="row">
         <div class="bar">
@@ -189,67 +196,248 @@
             <span>Java</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
-            <i class="fab fa-python" style="color: #4B8BBE;"></i>
-            <span>Python</span>
+            <i class="fas fa-leaf" style="color: #6DB33F;"></i>
+            <span>Spring Boot</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
-            <i class="fab fa-cuttlefish"></i>
-            <span>C++</span>
+            <i class="fas fa-shield-alt" style="color: #6DB33F;"></i>
+            <span>Spring Security (JWT)</span>
           </div>
         </div>
-  
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-project-diagram"></i>
+            <span>Microservices</span>
+          </div>
+        </div>
+
         <div class="bar">
           <div class="info">
             <i class="fab fa-node-js" style="color: #68a063;"></i>
-            <span>NodeJS</span>
+            <span>Node.js</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-server"></i>
+            <span>Express</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-php" style="color: #777BB4;"></i>
+            <span>PHP</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-code" style="color: #00599C;"></i>
+            <span>C++</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-android" style="color: #3DDC84;"></i>
+            <span>Android (Java)</span>
           </div>
         </div>
       </div>
-  
+
       <!-- Databases & DevOps -->
       <div class="row">
         <div class="bar">
           <div class="info">
-            <i class="fas fa-database"></i>
+            <i class="fas fa-database" style="color: #F80000;"></i>
+            <span>Oracle & SQL/PLSQL</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-database" style="color: #4479A1;"></i>
             <span>MySQL</span>
           </div>
         </div>
-  
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-database" style="color: #316192;"></i>
+            <span>PostgreSQL</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-database" style="color: #47A248;"></i>
+            <span>MongoDB</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-bolt" style="color: #DC382D;"></i>
+            <span>Redis</span>
+          </div>
+        </div>
+
         <div class="bar">
           <div class="info">
             <i class="fab fa-git-alt" style="color: #f1502f;"></i>
             <span>Git & GitHub</span>
           </div>
         </div>
-  
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-gitlab" style="color: #FC6D26;"></i>
+            <span>GitLab CI/CD</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-docker" style="color: #0db7ed;"></i>
+            <span>Docker & Registry</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-jenkins" style="color: #D24939;"></i>
+            <span>Jenkins</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-wave-square" style="color: #4E9BCD;"></i>
+            <span>SonarQube</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-shield-alt" style="color: #0464B8;"></i>
+            <span>OWASP ZAP</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-aws" style="color: #FF9900;"></i>
+            <span>AWS</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-microsoft" style="color: #0078D4;"></i>
+            <span>Azure</span>
+          </div>
+        </div>
+
         <div class="bar">
           <div class="info">
             <i class="fab fa-linux"></i>
             <span>Linux</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
-            <i class="fab fa-docker" style="color: #0db7ed;"></i>
-            <span>Docker</span>
-          </div>
-        </div>
-  
-        <div class="bar">
-          <div class="info">
-            <i class="fab fa-jenkins"></i>
-            <span>Jenkins</span>
+            <i class="fas fa-terminal"></i>
+            <span>Bash</span>
           </div>
         </div>
       </div>
-  
+
+      <!-- Data Engineering & Analytics -->
+      <div class="row">
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-table" style="color: #150458;"></i>
+            <span>Pandas</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-calculator" style="color: #4D77CF;"></i>
+            <span>NumPy</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-brain" style="color: #F8993A;"></i>
+            <span>Scikit‑learn</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-layer-group" style="color: #FFCC00;"></i>
+            <span>Hadoop</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-exchange-alt" style="color: #6c63ff;"></i>
+            <span>ETL</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-chart-bar" style="color: #F2C811;"></i>
+            <span>Power BI</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Testing & QA -->
+      <div class="row">
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-vial" style="color: #6fa76f;"></i>
+            <span>JUnit</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-vials" style="color: #6fa76f;"></i>
+            <span>Mockito</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-bug" style="color: #43B02A;"></i>
+            <span>Selenium</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-paper-plane" style="color: #FF6C37;"></i>
+            <span>Postman</span>
+          </div>
+        </div>
+      </div>
+
       <!-- Management & Tools -->
       <div class="row">
         <div class="bar">
@@ -258,17 +446,28 @@
             <span>Jira / UML / Scrum</span>
           </div>
         </div>
-  
+
         <div class="bar">
           <div class="info">
-            <i class="fas fa-wrench"></i>
-            <span>Postman</span>
+            <i class="fab fa-confluence" style="color: #172B4D;"></i>
+            <span>Confluence</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fas fa-code" style="color: #85EA2D;"></i>
+            <span>Swagger / OpenAPI</span>
+          </div>
+        </div>
+
+        <div class="bar">
+          <div class="info">
+            <i class="fab fa-figma" style="color: #F24E1E;"></i>
+            <span>Figma</span>
           </div>
         </div>
       </div>
-  
-    </div>
-  </section>
   
 
 
